common/omnigent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omnigent
  namespace: omnigent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: omnigent
    app.kubernetes.io/instance: omnigent
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
